# splunk-monitor

./: .gitignore  Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: continuous-integration.yml  pr-lint.yaml  sbom.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-smoke-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.HandleSplunkHec.xml  AssignMessage.SetResponse203.xml  FlowCallout.SetSplunkPayload.xml  ServiceCallout.CallHealthcheckEndpoint.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/resources/jsc/: HealthCheck.SetResponse.js
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: splunk-monitor.yaml
tests/: api_tests.py  test_endpoints.py
