[tool.poetry]
name = "splunk-monitor"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/splunk-monitor"
homepage = "https://github.com/NHSDigital/splunk-monitor"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^5.4.1"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.34"
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.10.11"
pytest-asyncio = "^0.14.0"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.43-alpha/api_test_utils-1.1.43a0-py3-none-any.whl"}

[tool.poetry.scripts]
