[tool.poetry]
name = "splunk-monitor"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/splunk-monitor"
homepage = "https://github.com/NHSDigital/splunk-monitor"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
pytest-nhsd-apim = "^4.0.1"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^5.4.1"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.34"
pytest = "^8.2.0"
coverage = "^5.5"
aiohttp = "^3.10.11"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
